Atualiza dependências no package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "conta-bancaria-ts",
+  "name": "conta-bancaria-muniz",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Muniz",
   "license": "ISC",
   "description": "",
   "dependencies": {
